k8s/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-api
  namespace: who-goes-to-try
spec:
  stripPrefix:
    prefixes:
      - /api
