k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: who-goes-to-try-backend
  namespace: who-goes-to-try
  labels:
    app: who-goes-to-try-backend
spec:
  selector:
    app: who-goes-to-try-backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
