k8s/combined_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: who-goes-to-try-combined
  namespace: who-goes-to-try
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: "letsencrypt"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - who-goes-to-try.hackathon.sev-2.com
      secretName: who-goes-to-try-tls
  rules:
    - host: who-goes-to-try.hackathon.sev-2.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: who-goes-to-try-backend
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: who-goes-to-try-frontend
                port:
                  number: 80
