k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: who-goes-to-try-combined
  namespace: who-goes-to-try
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - who-goes-to-try.hackathon.sev-2.com
      secretName: who-goes-to-try-tls-cert
  rules:
    - host: who-goes-to-try.hackathon.sev-2.com
      http:
        paths:
          # 1. Backend (HARUS DI ATAS) agar /api tidak "dimakan" oleh frontend
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: who-goes-to-try-backend
                port:
                  number: 3000
          # 2. Frontend (DI BAWAH) sebagai jalur utama halaman web
          - path: /
            pathType: Prefix
            backend:
              service:
                name: who-goes-to-try-frontend
                port:
                  number: 80
